@@ -238,19 +238,6 @@ cb_set_chartable_font (GtkWidget *widget, gpointer user_data)
 {
     gtk_button_clicked (GTK_BUTTON (mainapp->fontpicker));
 }
-void
-cb_entry_changed (GtkWidget *widget, gpointer data)
-{
-    gchar *text;
-
-    text = gtk_editable_get_chars (GTK_EDITABLE (widget), 0, -1);
-    if (strcmp (text, "") == 0) 
-      edit_menu_set_sensitivity (FALSE);
-    else
-      edit_menu_set_sensitivity (TRUE);
-
-    g_free (text);
-}
 
 void
 cb_entry_changed (GtkWidget *widget, gpointer data)
