@@ -1,3 +1,7 @@
+2002-07-15  Glynn Foster  <glynn.foster@sun.com>
+
+	* src/callbacks.c: Remove dumb stuff which breaks the build.
+
 2002-07-11  Glynn Foster  <glynn.foster@sun.com>
 
         * src/asciiselect.c: (ascii_select_init): Add mnemonics
